2010-07-30  Sergio Martin <sergio.martin@artica.es>

	* extras/pandoradb_migrate_v3.1_to_v3.2.sql: Typo fix 
	into new table name

2010-07-30  Sergio Martin <sergio.martin@artica.es>

	* include/functions_networkmap.php
	include/help/en/help_network_map.php
	include/help/es/help_network_map.php
	pandoradb.sql
	operation/agentes/networkmap.topology.php
	operation/agentes/networkmap.groups.php
	operation/agentes/ver_agente.php
	operation/agentes/networkmap.php
	extras/pandoradb_migrate_v3.1_to_v3.2.sql: Created network maps
	storage on database, clean the network maps code and fixed some
	little bugs of the same section

2010-07-29  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php: Updated reporting functions to work
	  with uncompressed data. 

	* include/fgraph.php, include/functions.php: Added a generic
	  function to check whether a module has compressed data.

2010-07-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php: Improved the print_select function
	to allows agroupation of options

2010-07-28  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Async modules are not compressed. Fixed charts
	  for these modules.

2010-07-28  Miguel de Dios  <miguel.dedios@artica.es>
	* install.php: fixed unclose bold tag.

2010-07-28  Miguel de Dios  <miguel.dedios@artica.es>
	* godmode/reporting/visual_console_builder.data.php: fixed the select box
	field for to don't show None value for map background.

2010-07-27  Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_reporting.php: added new parameters in the function
	"get_agentmodule_sla", the parameters days of week to search and range of
	time. And use new parameteres in the call for SLA data in function
	"render_report_html_item".
	
	* pandoradb.sql, extras/pandoradb_migrate_v3.1_to_v3.2.sql: in table
	"treport_content" added the fields for set days of week and range time
	for SLA.
	
	* operation/reporting/reporting_xml.php: use new parameters in the call for